# AI-RPG

./: .env.example  .gitignore  README.md  ai_rpg.db  alembic.ini  package.json  progress.md  pyproject.toml  run.ps1
alembic/: env.py
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 5f2f8f2f9a4d_action_catalog_and_action_points.py  88dd71e25e25_initial_schema.py
backend/src/ai_rpg/: __init__.py  runtime.py
backend/src/ai_rpg/cli/: main.py  scenario_menu.py
backend/src/ai_rpg/core/: __init__.py  config.py  contracts.py
backend/src/ai_rpg/db/: combat_repo.py  models.py  repositories.py
backend/src/ai_rpg/game/: action_evaluator.py  combat_rules.py  context_builder.py  intent_parser.py  play_loop.py  simulation.py  time.py  turn_service.py
backend/src/ai_rpg/llm/: adapter.py  openai_compatible.py
backend/src/ai_rpg/scenarios/: seed_loader.py  templates.py
backend/src/ai_rpg/web/: main.py  schemas.py
backend/tests/: conftest.py  test_action_evaluator.py  test_cli.py  test_combat.py  test_context_builder.py  test_play_loop.py  test_repositories.py  test_turn_service.py  test_web_api.py
docs/: SUBAGENT_HANDOFF.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
output/: snapshot-check.json  terminal-divider-actions.json
scripts/: backend.mjs  dev.mjs  frontend.mjs
tests/: conftest.py  test_action_evaluator.py  test_cli.py  test_combat.py  test_context_builder.py  test_repositories.py  test_simulation.py
(+64 files in other folders)
