[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-rpg"
version = "0.1.0"
description = "Terminal-native LLM RPG with authoritative SQLite game state."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.10,<3.0",
  "rich>=13.9,<14.0",
  "sqlalchemy>=2.0.36,<3.0",
  "typer>=0.15,<1.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
]

[project.scripts]
ai-rpg = "ai_rpg.cli.main:run"
ai-rpg-web = "ai_rpg.web.main:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/ai_rpg"]
